# auto_nltk_web

./: Cargo.toml  LICENSE  README.md  readme.txt
script/make_url/: Cargo.toml  output.txt
script/make_url/src/: main.rs
src/: main.rs
src/db/: mod.rs
src/init/: mod.rs  static_json.rs
src/internal/: mod.rs
src/internal/app0/controller/: home.rs  index.rs  md.rs  mod.rs  nav.rs
src/lib_static/: word_tag.json
src/libs/py/: 2.py
src/libs/submit_url/: Cargo.toml
src/libs/submit_url/src/: main.rs
src/pkg/: mod.rs
src/pkg/app0/: mod.rs
src/pkg/app0/model/: auth.rs  mod.rs
src/templates/: index.html
src/tool/: mod.rs  nltk.rs  shell.rs
src/util/: jwt.rs  md5.rs  mod.rs  read.rs
