workspace = { members = [ "script/make_url","src/libs/submit_url"] }
[package]
name = "axumApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde = "1"
punkt = "1.0.5"
diesel = "2.1.4"
vtext = "0.2.0"
tower = "0.4.13"
tower-http = {version ="0.5.0", features = ["full"] }
tracing = "0.1"
askama = "0.12.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-serve-static = "0.1.0" 
include_dir = "0.7.0"
hex-literal = "0.4.1"
md-5 = "0.10.6"
hmac = "0.12.1"
sha2 = "0.10.8"
tinyjson = "2.5.1"
serde_json = "1.0.113"
anyhow = "1.0.79"
lazy_static = "1.4.0"

 
